Formula with basic operations

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,2 +1,3 @@
+AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = insertionfinder
-insertionfinder_SOURCES = main.c
+insertionfinder_SOURCES = main.c formula.c data-structure/linked-list.c
