--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
-AUTOMAKE_OPTIONS = subdir-objects
+SUBDIRS = commands data-structure
 bin_PROGRAMS = insertionfinder
-insertionfinder_SOURCES = main.c formula.c data-structure/linked-list.c
+insertionfinder_SOURCES = cube.h formula.h cube.c formula.c main.c
+insertionfinder_CPPFLAGS = -Icommands -Idata-structure
+insertionfinder_LDADD = commands/libcommands.a data-structure/libdatastructure.a
