--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,17 @@
 AC_INIT([insertionfinder], [0.0], [xuanyan@xuanyan.ws])
+
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
+AM_PROG_AR
+
 AC_PROG_CC
+AC_PROG_RANLIB
+
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([
+    Makefile
+    src/Makefile
+    src/commands/Makefile
+    src/data-structure/Makefile
+])
+
 AC_OUTPUT
