AC_CHECK_HEADERS AC_CHECK_FUNCS

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,9 @@ AM_PROG_AR
 AC_PROG_CC
 AC_PROG_RANLIB
 
+AC_CHECK_HEADERS([getopt.h regex.h])
+AC_CHECK_FUNCS([strdup])
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
     Makefile
