better code structure

--- a/src/commands/Makefile.am
+++ b/src/commands/Makefile.am
@@ -1,2 +1,2 @@
 noinst_LIBRARIES = libcommands.a
-libcommands_a_SOURCES = parser.h utils.h verify.h parser.c utils.c verify.c
+libcommands_a_SOURCES = commands.h parser.h utils.h parser.c utils.c verify.c
