--- a/src/commands/Makefile.am
+++ b/src/commands/Makefile.am
@@ -1,2 +1,3 @@
 noinst_LIBRARIES = libcommands.a
-libcommands_a_SOURCES = commands.h parser.h utils.h parser.c utils.c verify.c
+libcommands_a_SOURCES = commands.h parser.h utils.h \
+    generate-algfile.c parser.c utils.c verify.c
