add missing directories

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
-SUBDIRS = commands data-structure
+SUBDIRS = commands data-structure finder
 bin_PROGRAMS = insertionfinder
 insertionfinder_SOURCES = algorithm.h cube.h formula.h \
     algorithm.c cube.c formula.c main.c
-insertionfinder_CPPFLAGS = -Icommands -Idata-structure
+insertionfinder_CPPFLAGS = -Icommands -Idata-structure -Ifinder
 insertionfinder_LDADD = commands/libcommands.a \
     data-structure/libdatastructure.a finder/libfinder.a
