--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,9 @@
-SUBDIRS = commands data-structure finder
+SUBDIRS = algorithm commands cube data-structure finder formula
 bin_PROGRAMS = insertionfinder
-insertionfinder_SOURCES = algorithm.h cube.h formula.h \
-    algorithm.c cube.c formula.c main.c
-insertionfinder_CPPFLAGS = -Icommands -Idata-structure -Ifinder
+insertionfinder_SOURCES = main.c
 insertionfinder_LDADD = commands/libcommands.a \
-    data-structure/libdatastructure.a finder/libfinder.a
+    finder/libfinder.a \
+    algorithm/libalgorithm.a \
+    cube/libcube.a \
+    formula/libformula.a \
+    data-structure/libdatastructure.a
