--- a/src/commands/Makefile.am
+++ b/src/commands/Makefile.am
@@ -1,3 +1,3 @@
 noinst_LIBRARIES = libcommands.a
 libcommands_a_SOURCES = commands.h parser.h utils.h \
-    generate-algfile.c parser.c utils.c verify.c
+    generate-algfile.c parser.c solve.c utils.c verify.c
