--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,4 +7,6 @@ insertionfinder_LDADD = commands/libcommands.a \
 	cube/libcube.a \
 	formula/libformula.a \
 	data-structure/libdatastructure.a \
-	$(json_LIBS)
+	$(json_LIBS) \
+	-lm
+insertionfinder_LDFLAGS = -pthread
