split source files

--- a/src/formula/Makefile.am
+++ b/src/formula/Makefile.am
@@ -1,2 +1,2 @@
 noinst_LIBRARIES = libformula.a
-libformula_a_SOURCES = formula.h formula.c
+libformula_a_SOURCES = formula.h utils.h formula.c insertion.c utils.c
