--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,7 @@ AC_PROG_RANLIB
 AC_PROG_LN_S
 
 AC_CHECK_HEADERS([getopt.h pthread.h regex.h unistd.h])
-AC_CHECK_FUNCS([strdup open_memstream])
+AC_CHECK_FUNCS([strdup open_memstream clock_gettime])
 
 PKG_CHECK_MODULES([json], [json-glib-1.0 >= 1.1.2])
 
