--- a/src/data-structure/Makefile.am
+++ b/src/data-structure/Makefile.am
@@ -1,3 +1,3 @@
-noinst_LIBRARIES = libdatastructure.a
-libdatastructure_a_SOURCES = hash-map.h linked-list.h utils.h \
+noinst_LTLIBRARIES = libdatastructure.la
+libdatastructure_la_SOURCES = hash-map.h linked-list.h utils.h \
 	hash-map.c linked-list.c
