--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ Makefile.in
 /autoscan.log
 /autoscan-*.log
 /aclocal.m4
+/build-aux
 /compile
 /config.guess
 /config.h
@@ -77,11 +78,13 @@ Makefile.in
 /configure.scan
 /depcomp
 /install-sh
+/m4
 /missing
 /stamp-h1
 
 # https://www.gnu.org/software/libtool/
 
+/libtool
 /ltmain.sh
 
 # http://www.gnu.org/software/texinfo
@@ -93,6 +96,7 @@ Makefile.in
 Makefile
 .deps
 .dirstamp
+.libs
 
 /.gcc-flags.json
 
