--- a/src/cube/Makefile.am
+++ b/src/cube/Makefile.am
@@ -1,2 +1,2 @@
-noinst_LIBRARIES = libcube.a
-libcube_a_SOURCES = common.h cube.h cube.c cycles.c twists.c
+noinst_LTLIBRARIES = libcube.la
+libcube_la_SOURCES = common.h cube.h cube.c cycles.c twists.c
