--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
+SUBDIRS = formula
 bin_PROGRAMS = insertionfinder
 insertionfinder_SOURCES = main.cpp
+insertionfinder_LDADD = formula/libformula.la
