--- a/src/formula/Makefile.am
+++ b/src/formula/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libformula.la
-libformula_la_SOURCES = utils.h formula.cpp insertion.cpp
+libformula_la_SOURCES = utils.h formula.cpp algorithm.cpp insertion.cpp
