--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
-SUBDIRS = formula
+SUBDIRS = algorithm
 bin_PROGRAMS = insertionfinder
 insertionfinder_SOURCES = main.cpp
-insertionfinder_LDADD = formula/libformula.la
+insertionfinder_LDADD = algorithm/libalgorithm.la
