--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,7 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
-SUBDIRS = algorithm
+SUBDIRS = algorithm cube
 bin_PROGRAMS = insertionfinder
 insertionfinder_SOURCES = main.cpp
-insertionfinder_LDADD = algorithm/libalgorithm.la
+insertionfinder_LDADD = \
+    algorithm/libalgorithm.la \
+    cube/libcube.la
