--- a/src/cube/Makefile.am
+++ b/src/cube/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libcube.la
-libcube_la_SOURCES = cube.cpp twist.cpp
+libcube_la_SOURCES = cube.cpp cycle.cpp twist.cpp
