--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
-SUBDIRS = algorithm cube
+SUBDIRS = algorithm case cube
 bin_PROGRAMS = insertionfinder
 insertionfinder_SOURCES = main.cpp
 insertionfinder_LDADD = \
     algorithm/libalgorithm.la \
+    case/libcase.la \
     cube/libcube.la
