--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -1,4 +1,4 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libalgorithm.la
-libalgorithm_la_SOURCES = utils.h \
+libalgorithm_la_SOURCES = utils.hpp \
     algorithm.cpp algorithm-generating.cpp insertion.cpp
