basic cli parser using boost.program_options

--- a/configure.ac
+++ b/configure.ac
@@ -18,6 +18,7 @@ AC_CONFIG_FILES([
     src/Makefile
     src/algorithm/Makefile
     src/case/Makefile
+    src/cli/Makefile
     src/cube/Makefile
 ])
 
