--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libcli.la
-libcli_la_SOURCES = parser.hpp parser.cpp
+libcli_la_SOURCES = commands.hpp parser.hpp parser.cpp verify.cpp
