fix missing files in Makefile.am

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,1 +1,2 @@
-nobase_include_HEADERS = algorithm.hpp case.hpp cube.hpp
+nobase_include_HEADERS = fallbacks/optional.hpp \
+    algorithm.hpp case.hpp cube.hpp
