--- a/src/utils/Makefile.am
+++ b/src/utils/Makefile.am
@@ -1,2 +1,2 @@
 noinst_LTLIBRARIES = libutils.la
-libutils_la_SOURCES = memory.h io.h memory.c io.c
+libutils_la_SOURCES = memory.h memstream.h io.h memory.c memstream.c io.c
