improve code style

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -1,3 +1,4 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libcli.la
-libcli_la_SOURCES = commands.hpp generate.cpp parser.hpp parser.cpp verify.cpp
+libcli_la_SOURCES = commands.hpp parser.hpp \
+    generate.cpp parser.cpp verify.cpp
