--- a/src/cube/Makefile.am
+++ b/src/cube/Makefile.am
@@ -1,3 +1,4 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libcube.la
-libcube_la_SOURCES = center.cpp cube.cpp cycle.cpp twist.cpp utils.hpp
+libcube_la_SOURCES = utils.hpp \
+    center.cpp cube.cpp cycle.cpp twist.cpp
