--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,2 +1,3 @@
 nobase_include_HEADERS = fallbacks/optional.hpp \
-    algorithm.hpp case.hpp cube.hpp
+    algorithm.hpp case.hpp cube.hpp \
+    finder/brute-force.hpp finder/finder.hpp
