--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -1,4 +1,5 @@
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include \
+    -DALGORITHMSDIR=\"$(datadir)/$(PACKAGE)/$(VERSION)/algorithms\"
 noinst_LTLIBRARIES = libcli.la
 libcli_la_SOURCES = commands.hpp parser.hpp \
-    generate.cpp parser.cpp verify.cpp
+    generate.cpp parser.cpp search.cpp verify.cpp
