--- a/src/finder/Makefile.am
+++ b/src/finder/Makefile.am
@@ -1,4 +1,6 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 noinst_LTLIBRARIES = libfinder.la
 libfinder_la_SOURCES = utils.hpp \
-    brute-force.cpp brute-force-worker.cpp finder.cpp
+    brute-force.cpp brute-force-worker.cpp \
+    finder.cpp \
+    greedy.cpp greedy-worker.cpp
