--- a/data/algorithms/Makefile.am
+++ b/data/algorithms/Makefile.am
@@ -1,13 +1,12 @@
+SUBDIRS = extras
 dist_algorithms_DATA = \
 	2x2CP.txt 2x2EP.txt 3CP.txt \
 	3EP.txt C-other.txt CO.txt E-other.txt EO.txt \
-	no-parity-other.txt parity.txt center.txt \
-	extras/no-parity-other.txt extras/parity.txt
+	no-parity-other.txt parity.txt center.txt
 algorithms_DATA = \
 	2x2CP.algs 2x2EP.algs 3CP.algs \
 	3EP.algs C-other.algs CO.algs E-other.algs EO.algs \
-	no-parity-other.algs parity.algs center.algs \
-	extras/no-parity-other.algs extras/parity.algs
+	no-parity-other.algs parity.algs center.algs
 algorithmsdir = $(datadir)/$(PACKAGE)/$(VERSION)/algorithms
 
 .txt.algs:
