--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ LT_INIT
 AC_PROG_CXX
 AC_LANG([C++])
 AX_CXX_COMPILE_STDCXX([17])
+AX_PTHREAD
 
 AC_CHECK_HEADERS([optional])
 AC_CHECK_HEADERS([filesystem])
