--- a/data/algorithms/extras/Makefile.am
+++ b/data/algorithms/extras/Makefile.am
@@ -1,6 +1,6 @@
 dist_algorithms_extras_DATA = no-parity-other.txt parity.txt
 algorithms_extras_DATA = no-parity-other.algs parity.algs
-algorithms_extrasdir = $(datadir)/${PACKAGE}/algorithms/extras
+algorithms_extrasdir = $(datadir)/${PACKAGE}/${VERSION}/algorithms/extras
 
 .txt.algs:
 	@echo Generating algorithm file extras/$@
