--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,3 +1,4 @@
-nobase_include_HEADERS = fallbacks/optional.hpp \
+nobase_include_HEADERS = \
+    fallbacks/filesystem.hpp fallbacks/optional.hpp \
     algorithm.hpp case.hpp cube.hpp \
     finder/brute-force.hpp finder/finder.hpp finder/greedy.hpp
