use boost::asio

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,7 @@ AS_IF([test "$HAVE_FILESYSTEM"], [], [
     BOOST_SYSTEM
     BOOST_FILESYSTEM
 ])
+BOOST_ASIO
 BOOST_PROGRAM_OPTIONS
 
 AC_CONFIG_HEADERS([config.h])
