--- a/configure.ac
+++ b/configure.ac
@@ -11,11 +11,10 @@ AC_LANG([C++])
 AX_CXX_COMPILE_STDCXX([17])
 AX_PTHREAD
 
-AC_CHECK_HEADERS([optional], [HAVE_OPTIONAL=yes])
+AC_CHECK_HEADERS([optional], [], [Missing header file])
 AC_CHECK_HEADERS([filesystem], [HAVE_FILESYSTEM=yes])
 
 BOOST_REQUIRE
-AS_IF([test "$HAVE_OPTIONAL"], [], [BOOST_OPTIONAL])
 AS_IF([test "$HAVE_FILESYSTEM"], [], [
     BOOST_SYSTEM
     BOOST_FILESYSTEM
