class Rotation, class Twist

--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,7 @@ AC_CONFIG_FILES([
     src/cli/Makefile
     src/cube/Makefile
     src/finder/Makefile
+    src/twist/Makefile
     test/Makefile
     data/algorithms/Makefile
     data/algorithms/extras/Makefile
