--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
-SUBDIRS = algorithm case cli cube finder
+SUBDIRS = algorithm case cli cube finder twist
 bin_PROGRAMS = insertionfinder
 insertionfinder_SOURCES = main.cpp
 insertionfinder_LDADD = \
@@ -8,6 +8,7 @@ insertionfinder_LDADD = \
     case/libcase.la \
     cube/libcube.la \
     algorithm/libalgorithm.la \
+    twist/libtwist.la \
     ${PTHREAD_CFLAGS} \
     ${BOOST_SYSTEM_LIBS} \
     ${BOOST_FILESYSTEM_LIBS} \
@@ -19,7 +20,8 @@ libinsertionfinder_la_LIBADD = \
     finder/libfinder.la \
     case/libcase.la \
     cube/libcube.la \
-    algorithm/libalgorithm.la
+    algorithm/libalgorithm.la \
+    twist/libtwist.la
 
 install-exec-hook:
 	cd $(DESTDIR)$(bindir) \
