improve code style

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -6,5 +6,4 @@ nobase_include_HEADERS = \
     insertionfinder/cube.hpp \
     insertionfinder/finder/brute-force.hpp \
     insertionfinder/finder/finder.hpp \
-    insertionfinder/finder/greedy.hpp \
-    insertionfinder/utils.hpp
+    insertionfinder/finder/greedy.hpp
