class Insertion and Solution

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -4,7 +4,9 @@ nobase_include_HEADERS = \
     insertionfinder/case.hpp \
     insertionfinder/config.h \
     insertionfinder/cube.hpp \
+    insertionfinder/insertion.hpp \
     insertionfinder/twist.hpp \
+    insertionfinder/utils.hpp \
     insertionfinder/finder/brute-force.hpp \
     insertionfinder/finder/finder.hpp \
     insertionfinder/finder/greedy.hpp
