improve insertion display code

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -1,5 +1,5 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include \
     -DALGORITHMSDIR=\"$(datadir)/$(PACKAGE)/$(VERSION)/algorithms\"
 noinst_LTLIBRARIES = libcli.la
-libcli_la_SOURCES = commands.hpp parser.hpp \
-    generate.cpp improve.cpp parser.cpp search.cpp verify.cpp
+libcli_la_SOURCES = commands.hpp parser.hpp utils.hpp \
+    generate.cpp improve.cpp parser.cpp search.cpp utils.cpp verify.cpp
