use univalue as submodule while it does not exist system-wide

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,6 @@
+if USE_SYS_UNIVALUE
 SUBDIRS = include src test data/algorithms
+else
+SUBDIRS = vendors/univalue include src test data/algorithms
+endif
 ACLOCAL_AMFLAGS = -I m4
